Update: OpenCV-podstawy.md

--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -7,11 +7,8 @@ math: true
 ---
 
 
+Sztandarowa biblioteka do Computer Vision. Poznałem Pythona (i kupiłem [OpenCV AI Kit](https://www.kickstarter.com/projects/opencv/opencv-ai-kit) :D ) na tyle, że pora zacząć wykorzystywać go do czegoś bardziej interesującego. Chciałbym żeby ten post był spisem zagadnień i zapisem postępów nauki.
 
-Sztandarowa biblioteka do Computer Vision. Pozanłem Pythona (i kupiłem [OpenCV AI Kit](https://www.kickstarter.com/projects/opencv/opencv-ai-kit) :D ) na tyle, że pora zacząć wykorzystywać go do czegoś bardziej interesującego. 
-
-### Jupyter Notebook
-**[Jupyter Notebook](https://nbviewer.jupyter.org/github/mgurg/mgurg.github.io/blob/master/images/ipnyb/opencv.ipynb)** - uznałem że w przypadku OpenCV wygodniej będzie umieszczać treść w notatnikach Jupytera niż pisać ją na blogu. Dlatego każdy wpis z OpenCV będzie posiadał odnośnik do niego.
 
 ### Przydatne linki
 Zbiór linków z przydatnymi informacjami na start:
@@ -20,80 +17,6 @@ Zbiór linków z przydatnymi informacjami na start:
 [Wykłady AGH - Morphological Transformations](http://home.agh.edu.pl/~jsw/aipofm/)
 
 [OpenCV Python Tutorials](https://opencv-python-tutroals.readthedocs.io)
-
-# OpenCV - szybkie wprowadzenie
-
-Szybkie wprowadzenie: [Learn X in Y minutes: OpenCV](https://learnxinyminutes.com/docs/opencv/)
-
-Wczytanie OpenCV, Numpy i Pillow:
-```python
-# sudo apt install libgl1-mesa-glx
-import cv2
-
-import numpy as np
-from PIL import Image
-```
-
-## Podstawowe operacje
-
-Stworzenie pustego obrazu i wyświetlenie z pomoca biblioteki Pillow: 
-
-```python
-img = np.zeros((100,120,3), dtype='uint8')
-Image.fromarray(img)
-```
-
-Wczytanie istniejącego obrazu:
-```python
-img = cv2.imread('Lenna.png')
-Image.fromarray(img)
-```
-
-Numpy przechowuje kanały kolorów jako RGB, OpenCV zaś jako BGR
-
-* Matplotlib pyplot.imshow(): M x N x 3 image, where last dimension is RGB.
-* OpenCV cv2.imshow(): M x N x 3 image, where last dimension is BGR
-
-OpenCV zawiera funkcję która pozwala przekonwertować kanały. Można też skorzystać z pomocy Numpy, choć [nie jest to optymalne](https://answers.opencv.org/question/219040/fastest-way-to-convert-bgr-rgb-aka-do-not-use-numpy-magic-tricks/):
-
-```python
-img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # or numpy:
-img = img[...,::-1]  # or:
-img = img[:,:,::-1]
-```
-
-Wycięcie fragmentu zdjęcia
-```python
-# img_sliced = img[y1:y2,x1:x2]
-img = img[0:200, 0:200, :]
-```
-
-Zapisywanie obrazu:
-```python
-cv2.imwrite('save.jpg', img)
-```
-
-## Rysowanie
-```python
-cv2.line(img, (0,0), (200,200), (255,0,0), 5)
-cv2.circle(img, (100,100), 50, (255,0,0), 5)
-cv2.rectangle(img, (10,10), (100,100), (255,0,0), 5 )
-```
-
-## Operacje morfologiczne
-Bardzo dobry opis operacji morfologicznych znajduje się na polskiej wersji Wikipedi, np:
-[Dylatacja](https://pl.wikipedia.org/wiki/Cyfrowe_przetwarzanie_obrazów_binarnych#Dylatacja) i 
-[Erozja](https://pl.wikipedia.org/wiki/Cyfrowe_przetwarzanie_obrazów_binarnych#Erozja)
-
-```
-opening(A) = dilate(erode(A))
-closing(A) = erode(dilate(A))
-```
-
-Operatory tophat (ekstrakcja obszarów jasnych) i blackhat (ekstrakcja obszarów ciemnych) służą odpowiednio ekstrakcji jasnych i ciemnych obszarów w obrazie (poziom jasności określany w odniesieniu do najbliższego otoczenia). 
-
-tophat(A) = A − open(A)
-blackhat(A) = close(A) − A
 
 
 ### Ciekawe projekty
@@ -126,11 +49,11 @@ Lista tematów przerabianych na oficjalnych [kursach od OpenCV](https://opencv.o
 COMPUTER VISION I
 Module 1 :Getting Started with OpenCV
    1. Introduction to computer vision
-   2. Basic image operations
+   2. ~~Basic image operations~~
    3. Mathematical operations on images
    4. Sunglass filter : A simple application
    5. Bitwise operations
-   6. Image Annotation
+   6. ~~Image Annotation~~
    7. QR code detection
 
 Module 2 : Video IO and GUI
