--- a/_posts/2019-12-20-Jupyter.md
+++ b/_posts/2019-12-20-Jupyter.md
@@ -19,3 +19,8 @@ Najlepszy ciemny motyw jaki udało mi sie znaleźć: [Darcula](https://github.co
 `SHIFT + L` - pokazuje ukrywa numery linii
 
 Lokalnie pracuję korzystająć z [Dockera](https://mgurg.github.io/docker/2020/08/05/Docker.html)
+
+SpellCheck:
+```
+jupyter labextension install @ijmbarr/jupyterlab_spellchecker
+```
