--- a/_posts/2020-04-23-Linux.md
+++ b/_posts/2020-04-23-Linux.md
@@ -83,3 +83,11 @@ echo Lalalalla > plik.txt
 `source` - Executes the bash script within the existing environment.
 
 `./` - Environment used by the executed command is destroyed when script is done running
+
+### Zainstalowane aplikacje
+
+```bash
+apt list --installed
+
+sudo apt-get remove imagemagick-6.q16  
+```
