--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -30,6 +30,7 @@ Początkujące:
 - [Shape detection](https://www.pyimagesearch.com/2016/02/08/opencv-shape-detection/)
 - [center of contour](https://www.pyimagesearch.com/2016/02/01/opencv-center-of-contour/)
 - [panorama stitching](https://www.pyimagesearch.com/2016/01/11/opencv-panorama-stitching/)
+- [OpenCV GrabCut: Foreground Segmentation and Extraction](https://www.pyimagesearch.com/2020/07/27/opencv-grabcut-foreground-segmentation-and-extraction/)
 
 
 Zaawansowane:
