Update: ML introduction clean-up

--- a/_posts/2020-05-13-ROS.md
+++ b/_posts/2020-05-13-ROS.md
@@ -16,6 +16,8 @@ Robot Operating System (w skrócie: ROS) - kolejny z powodów dla których wybra
 
 [ROS for Beginners: How to Learn ROS](https://www.theconstructsim.com/ros-for-beginners-how-to-learn-ros/)
 
+Tutoriale na YT od [Bot Builders](https://www.youtube.com/channel/UC588sNuyfz7mTsL0xyl2HZQ/playlists)
+
 # ROS
 
 A *node* is a process that performs computation. 
