Update: Jupyter Lab instalation details

--- a/images/ipnyb/opencv_text_skew.ipynb
+++ b/images/ipnyb/opencv_text_skew.ipynb
@@ -10,13 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skylake\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "os.environ[\"OPENBLAS_CORETYPE\"] =\"Skylake\"\n",
-    "os.getenv(\"OPENBLAS_CORETYPE\")\n",
+    "# os.environ[\"OPENBLAS_CORETYPE\"] =\"Skylake\"\n",
+    "print(os.getenv(\"OPENBLAS_CORETYPE\"))\n",
     "\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -270,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
