--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -9,271 +9,113 @@ author: "Michał"
 
 Moim celem jest zbudowanie szybkiego prototypu strony, na której mógłbym pokazywać zebrane dane dotyczące [ogłoszeń Toyoty Yaris](https://mgurg.github.io/scrapy/2019/12/31/web-scrapping-otomoto.html). W związku z tym zabrałem się za przebudowę [początkowego kodu strony](https://mgurg.github.io/python/2020/01/23/python-flask-intro.html).
 
-Pomocny przy tym był tutorial z [Alicja & IT](http://www.alicja.it/category/flask/)
 
-## Model View Controller (MVC)
+## Rekonfiguraca NGINX i Gunicorn
+Opis zamiany strony zaślepki (Hello World) utworzonej [przy konfiguracji serwera](https://mgurg.github.io/python/2020/07/13/NGINX-Flask-SSL.html) na rozwiajany osobno [serwis dostępny w osobnym repozytorum](https://github.com/mgurg/flask_www)
 
-Wzorzec MVC zakłada podział aplikacji na trzy główne części, aby uprościć projektowanie aplikacji posiadających graficzne interfejsy użytkownika:
-
-**Model** – to reprezentacja problemu bądź logiki aplikacji + dane
-**Widok** – opisuje, jak wyświetlić pewną część modelu w ramach interfejsu użytkownika; może składać się z podwidoków odpowiedzialnych za mniejsze części interfejsu.
-**Kontroler** – przyjmuje dane wejściowe od użytkownika i reaguje na jego poczynania, zarządzając aktualizacje modelu oraz odświeżenie widoków.
-
-![https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/MVC-Process.svg/500px-MVC-Process.svg.png](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/MVC-Process.svg/500px-MVC-Process.svg.png)
-
-Ze względu na ilość elementów składowych aplikacji webowej, logika biznesowa powinna znajdować się w kodzie w ustalonym miejscu - najlepiej w modelach, podążając w myśl idei “*fat models, thin views*”.
-
-Ilość kodu odpowiedzialnego za logikę biznesową w poszczególnych elementach
-
-```
-Model > Kontroler > Widok
-```
-
-> MVT w django jest nieco podobne do mvc (oczywiście nie jest tym samym bo by tego pytania nawet nie było). To co odróżnia jedno od drugiego to to że w MVT nie ma kontrollera czyli tego C. Controller ma za zadanie kontrolować modele i widoki. W django mamy modele, widoki ale nie mamy controllera więc co je kontroluje? Okazuje się że controllerem jest sam framework django, ustawiając np stringi w urls.py z logicznego punktu widznia konfigurujesz kontroler. Czyli to nie jest tak że kontrolera nie ma, po prostu w django nie leży on w domenie zainteresowań programisty. Kolejna różnica to T czyli template. W MVT mamy rozdział pomiędzy widokiem (który wybiera które dane mają być przekazane do template), i template czyli sposobem, w jaki te dane zostaną zaprezentowane. Template w django jest samą strukturą dokumentu html + właśnie te dane które dostarczył widok. Zauważ że działanie template jest uwarunkowane zgodnością nazw danych. Jeżeli zgodności nie będzie to template będzie błędny, a nie view ani model, czyli template jest elementem paradoksalnie najmniej znaczącym w tej układance. Jest to zaletą MVT. Dzięki temu rozdziałowi jeden template może być użyty w paru widokach.
->
-
-[](https://hackersandslackers.com/your-first-flask-application)
-
-## Template language - Jinja2
-
-Korzystanie z szablonów jest możliwe po imporcie odpowiedniego modułu:
-
-```python
-from flask import render_template
-```
-
-Zasada działania Jinja2 polega na umieszczaniu w plikach źródłowych (html) znaczników, które następnie są zastępowane generowaną przez aplikację treścią:
-{% raw  %}
-`{{ wyrażenie }}` - w tym miejscu podstawiona zostanie wartość wyrażenia
-`{% block %}` - tak tworzymy blok, np., na potrzeby pętli, warunku; pamiętaj o zamknięciu bloku `{% endblock %}`
-
-`{# … #}` – dla komentarzy, które nie będą wyświetlać się na stronie
-
-`|` – znacznik oddzielający filtry od zmiennych
-
-`{{ abcd }}` – podstawi wartość zmiennej abcd
-`{{ url_for('hello') }}` – podstawi URL wywołujący funkcję hello()
-{% endraw  %}
-Przykład wykorzystania:
-
-```python
-from hello_world import app
-from flask import render_template
-
-# @app.route('/')
-# def index():
-#      return "Hello world!"
-
-@app.route('/')
-def index():
-    navigation = [
-        {
-            'href': 'otomoto',
-            'caption': 'Analiza ogłoszeń'
-        },
-        {
-            'href': 'price_predict',
-            'caption': 'Predykcja ceny'
-        }
-    return render_template('index.html', navigation=navigation)
-```
-
-Dodanie kolejnych podstron odbywa się poprzez dodanie włąsciwego `@app.route("/new_path")` Żeby uniknąć duplikowania nawigacji można wykorzystać **context processors**. Zmienne zdefiniowane w postaci słownika będą dodawane do każdego widoku w trakcie jego tworzenia:
-
-```python
-@app.context_processor
-def inject_variables():
-    return dict(
-        navigation = [
-            {
-                'href': '/',
-                'caption': 'Home'
-            },
-            {
-                'href': 'otomoto',
-                'caption': 'Analiza ogłoszeń'
-            },
-            {
-                'href': 'price_predict',
-                'caption': 'Predykcja ceny'
-            }
-        ])
-```
-
-## Blueprints 
-
-Mechanizm umożliwiający rozbicie projektu na mniejsze podzbiory. Analiza na przykładzie kodu, `views.py`:
-
-```python
-# częśc kodu zostałą przeniesiona do pliku report.py 
-from .report import report_blueprint
-app.register_blueprint(report_blueprint)
-
-#
-# @app.route('/report')
-# def report():
-#     return render_template('report.html')
-
-```
-
-Plik `report.py`:
-
-```python
-from flask import render_template
-from flask import Blueprint
-
-report_blueprint = Blueprint('report_blueprint', __name__)
-
-@report_blueprint.route('/report') #@report_blueprint zamiast org. @app
-def report():
-    return render_template('report.html')
-```
-
-Zmianie musiał ulec też plik base.html:
-
- `url_for('report_blueprint.report')` zamiast `url_for('report')`
-
-W tej chwili doszedł wyłącznie plik report.py w głównym folderze projektu. Przeniosłem go do folderu blueprints/report pod nazwą `__init__.py`
+Aktywujemy wirtualne środowisko i przechodzimy do folderu gdzie wgrałem pliki strony WWW pobrane z repozytorium:
 
 ```bash
-│   forms.py
-│   models.py
-│   report.py # <- do usunięcia
-│   views.py
-│   __init__.py
-│
-├───blueprints
-│   └───report
-│           __init__.py # <- nowa lokalizacja report.py
-│
-├───static
-│   ├───css
-│   ├───img
-│   └───js
-│
-├───templates
-        404.html
-        500.html
-        base.html
-        index.html
-        price_predict.html
-        report.html
+source ~/py_env/www_env/bin/activate
+cd ~/py_env/www_env/www
+```
+Do jej działania bedzie potrzebne doinstalowanie kilku paczek:
+
+```bash
+pip install python-dotenv
+
+pip install Flask-SQLAlchemy
+pip install Flask-Login
+pip install Flask-WTF
+
+pip install email-validator
+
+pip install pandas
+pip install xgboost
+pip install joblib
 ```
 
-W views.py wystarczy zmienić tylko jedną linijkę żeby całość działała:
-
-```python
-from .blueprints.report import report_blueprint
-```
-
-
-
-## Baza danych
-
-Moduł Flask-SQLAlchemy realizuje wsparcie SQLAlchemy dla Flaska. O ile w głownym projekcie trzymałem się czystego SQL, to Flask był dobrtyym momentem żeby zainteresować się ORM *(Object Relation Mapper)*.
-
-SQL:
-
-Zalety:
-- przydatny w procesie debugowania
-- wydajny
-
-Wady:
-- implementacje zapytań mogą być podatne na atak SQL Injection
-- implementacja zapytań zależna od rodzaju silnika
-- zapytania wymagają aktualizacji podczas każdej modyfikacji struktury tabel
-- Kod SQL wymieszany z kodem aplikacji
-
-Mapowanie obiektowo - relacyjne polega na mapowaniu danych w postaci tabelarycznej (relacji w bazie danych) na obiekty i odwrotnie.
-
-`__init__.py`
-
-```python
-from flask import Flask
-from flask_sqlalchemy import SQLAlchemy
-
-app = Flask(__name__)
-app.config['DEBUG'] = True
-app.config['SECRET_KEY'] = 'verysecretkey'
-app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///baza.db'
-app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
-
-db = SQLAlchemy(app)
-
-from hello_world import views
-```
-
-
-
-
-
-
-
-## Bootstrap
-
-Początkowo chciałem ominąć całkiem warstwę wizualną, ale w 2020 nie wypada nikomu pokazywać gołego HTML-a. Żeby nie tracić czasu na nadrabianie zaległości z CSS i HTML postanowiłem skorzystać z [Bootstrap](https://getbootstrap.com/).
-
- Z *Bootstrap* też nie mam żadnego doświadczenia, ale ma dobrą dokumentację i styluje wszystkie elementy HTML-a. Zastanawiałem się nad alternatywą w postaci czegoś nowszego (*Bulma*, *TailwindCSS*) , ale ponieważ nie zamierzam doktoryzować się z webdeveloperki to uznałem że warto zacząć od starszego ale pewniejszego rozwiązania.
-
-Po godzinie pracy udało mi się uzyskać miłą dla oka stronę. Struktura projektu:
+Jeżeli w wyniku wykonania poniższej komendy nie pojawiają się błędy to powinniśmy móc [przeglądać stronę na porcie 5000](http://192.166.219.228:5000/)
 
 ```
-.
-|-- helloworld.sock
-|-- myproject.py
-|-- static
-|   |-- css
-|   |   |-- bootstrap-grid.min.css
-|   |   |-- bootstrap.min.css
-|   |   |-- bootstrap-reboot.min.css
-|   `-- js
-|       |-- bootstrap.bundle.min.js
-|       `-- bootstrap.min.js
-|-- templates
-|   |-- base.html
-|   |-- home.html
-|   `-- otomoto.html
-`-- wsgi.py
+gunicorn --bind 0.0.0.0:5000 wsgi:app
 ```
 
-
-
-Szablon strony składa się z dwóch części. Głównego pliku `base.html` - nagłówek, nawigacja etc. i plików z treścią: `home.html`, `otomoto.html`
-
-## Formularze
-
-na potrzeby interakcji z użytkownikiem będę potrzebował formularz w którym będzie można wprowadzić parametry ogłoszenia. Wygląda na to że w Flask odpowiada za to Flask-WTF
+Jeżeli wszystko działa to można przerwać działanie gunicorn `CTRL+C` i uaktualnić konfigurację NGINX.
 
 ```
-pip install flask-wtf
+cd /etc/nginx/sites-available/
+sudo nano helloworld
+```
+Plik konfiguracyjny po zmianach:
+
+```
+server {
+        listen 80;
+        listen [::]:80;
+
+        root /home/lambda/py_env/www_env/www/;
+        index index.html index.htm index.ngnix-debian.html;
+
+        server_name 192.166.219.228 mojadomena.pl;
+
+        location / {
+                try_files $uri $uri/ =404;
+                include proxy_params;
+                proxy_pass http://unix:/home/lambda/py_env/www_env/www/helloworld.sock;
+ }
+}
+
+```
+
+Sprawdzenie poprawności konfiguracji i przeładowanie NGINX:
+
+```bash
+sudo nginx -t
+sudo systemctl restart nginx
+```
+
+Jeżeli wszystko przebiegnie bez problemu, to po wejściu na strone powita nas komunikat: *502 Bad Gateway*, co oznacza że pora dokonfigurować Gunicorn do nowej rzeczywistości.
+
+```bash
+sudo nano /etc/systemd/system/helloworld.service
+```
+Nowa zawartość pliku:
+
+```
+[Unit]
+Description=Gunicorn instance to serve helloworld website
+After=network.target
+
+[Service]
+User=lambda
+Group=www-data
+
+WorkingDirectory=/home/lambda/py_env/www_env/www/ 
+Environment="PATH=/home/lambda/py_env/www_env/bin"
+ExecStart=/home/lambda/py_env/www_env/bin/gunicorn --workers 3 --bind unix:helloworld.sock -m 007 wsgi>
+
+[Install]
+WantedBy=multi-user.target
+
+```
+
+Restart usługi:
+
+```bash
+sudo systemctl disable helloworld
+sudo systemctl stop helloworld
+sudo systemctl start helloworld
+sudo systemctl enable helloworld
+```
+
+Po tym kroku wszystko powinno już działać, dla pewności możemy sprawdzic jezscze status przy pomocy:
+
+```bash
+sudo systemctl status helloworld
 ```
 
 
+---
 
-
-
-
-
-### Request Dispatching
-
-```python
-(ml_env) lambda@michal:~/environments/ml_env/www/helloworld$ python
->>> from myproject import app
->>> app.url_map
-Map([<Rule '/otomoto' (GET, HEAD, OPTIONS) -> otomoto>,
- <Rule '/' (GET, HEAD, OPTIONS) -> home>,
- <Rule '/static/<filename>' (GET, HEAD, OPTIONS) -> static>])
->>>
-```
-
-
-
-```python
-# name: Charlie
-/hello/?name=Charlie
-
-# name: Charlie
-# favorite_color: green
-/hello/?name=Charlie&favorite_color=green
-```
 
