Add: mvc.png  image

--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -60,7 +60,6 @@ server {
         server_name 192.166.219.228 mojadomena.pl;
 
         location / {
-                try_files $uri $uri/ =404;
                 include proxy_params;
                 proxy_pass http://unix:/home/lambda/py_env/www_env/www/helloworld.sock;
  }
@@ -98,6 +97,11 @@ ExecStart=/home/lambda/py_env/www_env/bin/gunicorn --workers 3 --bind unix:hello
 [Install]
 WantedBy=multi-user.target
 
+```
+
+Przypomnienie o właściwych uprawnieniach:
+```
+sudo chown -R lambda:www-data ~/py_env/www_env/www
 ```
 
 Restart usługi:
