--- a/_posts/2019-12-24-Linux.md
+++ b/_posts/2019-12-24-Linux.md
@@ -5,7 +5,7 @@ categories: Linux
 author: "Michał"
 ---
 
-Najważniejsze (podstawowe) informacje pomocne przy pracy z systemem Linuks.
+Najważniejsze (podstawowe) informacje pomocne przy pracy z systemem Linux.
 
 ## Dowiązanie symboliczne
 
@@ -21,16 +21,12 @@ ln -s katalog_istniejący katalog_symboliczny
 
 Bonus: [Dowiązania twarde](https://pl.wikipedia.org/wiki/Dowi%C4%85zanie_twarde)
 
-
-
 ## File permissions
 
 **r** = read permission
 **w** = write permission
 **x** = execute permission
  **-** = no permission 
-
-
 
 | **Number** | **Permission Type**   | **Symbol** |
 | ---------- | --------------------- | ---------- |
