--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -15,7 +15,7 @@ Do instalacji posłuzyłem się oficjalną instrukcją [oficjalną instrukcj](ht
 Udało mi się też znaleźć prosty tutorial z opisem pobierania obrazów i zarządzania kontenerami: [A Docker Tutorial for Beginners](https://docker-curriculum.com/). 
 
 Pierwszy problem pojawił się zaraz na początku, próba uruchomienia:
-```
+```bash
 docker run hello-world
 ```
 
@@ -25,14 +25,14 @@ See 'docker run --help'.
 
 Rozwiązaniem okazało się zminienie uprawnien do pliku `docker.sock` ([żródło](https://www.digitalocean.com/community/questions/how-to-fix-docker-got-permission-denied-while-trying-to-connect-to-the-docker-daemon-socket)):
 
-```
+```bash
 sudo chmod 666 /var/run/docker.sock
 ```
 
 Kolejnym znaczacym problemem było znalezienie sposobu na kontynyuację pracy po zamknięciu kontenera. Po serii eksperymentów i lekturze oficjalnej dokumentacji oraz artykułu [Tutorial: Running a Dockerized Jupyter Server for Data Science](https://www.dataquest.io/blog/docker-data-science/) doszedłem do optymalnego dla mnie sposobu pracy. 
 
 Pierwszym krokiem było utworzenie katalogu w  którym będą przechowywane dane do pracy: 
-```
+```bash
 mkdir ~/notebooks
 chmod 777 ~/notebooks
 ```
@@ -52,20 +52,24 @@ docker run --rm -p 10000:8888 --name jupyterl --env JUPYTER_TOKEN=1234 --volume 
 
 Tak uruchomiony kontener wymaga już tylko wpisania w oknie przeglądarki:
 
-```
+```bash
 127.0.0.1:10000/?token=1234
 ```
 
 Et voila! Można pracować wszystkie pliki zapisane w katalogu work bądą przechowywane na lokalnym systemie plików w katalogu '~/notebooks/'.
 
 Na końcu jeszcze kilka przydatnych komand:
-```
+
+```bash
 docker pull jupyter/scipy-notebook // pobiera obraz dockera
 docker images // obrazy dockera
-docker ps -a // kontenery (łącznie z nieakrtywnymi)
-docker system prune //usuwa wszystkie nieaktywn kontenery
+docker ps -a // kontenery (łącznie z nieaktywnymi)
+docker system prune //usuwa wszystkie nieaktywne kontenery
 docker stop {name}
 docker container start {id}
+
+docker inspect {name} //szczegółowe informacje
+
 ```
 
 ## Modyfikacja obrazu
@@ -74,3 +78,57 @@ Jeżeli potrzebny jest jakiś pakie który nie jest dostepny w pobranym obrazie,
 
 
 Dockerfile : https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile
+
+
+## Docker-compose
+
+Spięcie kilku kontenerów w jedną całość jest możliwe z wykorzystaniem docker-compose.
+
+Instalacja ([oficjalna instrukcja](https://docs.docker.com/compose/install/)):
+```bash
+sudo curl -L "https://github.com/docker/compose/releases/download/1.27.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+
+sudo chmod +x /usr/local/bin/docker-compose
+```
+
+Sprawdzenie działania:
+```bash
+docker-compose --version
+docker-compose version 1.27.3, build 4092ae5d
+```
+
+Plik *docker-compose.yml* dla Wordpress:
+
+```yml
+version: '3.3'
+
+services:
+   db:
+     image: mysql:5.7
+     volumes:
+       - db_data:/var/lib/mysql
+     restart: always
+     environment:
+       MYSQL_ROOT_PASSWORD: somewordpress
+       MYSQL_DATABASE: wordpress
+       MYSQL_USER: wordpress
+       MYSQL_PASSWORD: wordpress
+
+   wordpress:
+     depends_on:
+       - db
+     image: wordpress:latest
+     ports:
+       - "8800:80"
+     restart: always
+     environment:
+       WORDPRESS_DB_HOST: db:3306
+       WORDPRESS_DB_USER: wordpress
+       WORDPRESS_DB_PASSWORD: wordpress
+       WORDPRESS_DB_NAME: wordpress
+volumes:
+    db_data: {}
+```
+
+
+Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem http://localhost:8800/
