--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -10,8 +10,8 @@ author: "Michał"
 Moim celem jest zbudowanie szybkiego prototypu strony, na której mógłbym pokazywać zebrane dane dotyczące [ogłoszeń Toyoty Yaris](https://mgurg.github.io/scrapy/2019/12/31/web-scrapping-otomoto.html). W związku z tym zabrałem się za przebudowę [początkowego kodu strony](https://mgurg.github.io/python/2020/01/23/python-flask-intro.html).
 
 
-## Rekonfiguraca NGINX i Gunicorn
-Opis zamiany strony zaślepki (Hello World) utworzonej [przy konfiguracji serwera](https://mgurg.github.io/python/2020/07/13/NGINX-Flask-SSL.html) na rozwiajany osobno [serwis dostępny w osobnym repozytorum](https://github.com/mgurg/flask_www)
+## Rekonfiguracja NGINX i Gunicorn
+Opis zamiany strony zaślepki (Hello World) utworzonej [przy konfiguracji serwera](https://mgurg.github.io/python/2020/07/13/NGINX-Flask-SSL.html) na rozwijany osobno [serwis dostępny w osobnym repozytorum](https://github.com/mgurg/flask_www)
 
 Aktywujemy wirtualne środowisko i przechodzimy do folderu gdzie wgrałem pliki strony WWW pobrane z repozytorium:
 
@@ -74,7 +74,7 @@ sudo nginx -t
 sudo systemctl restart nginx
 ```
 
-Jeżeli wszystko przebiegnie bez problemu, to po wejściu na strone powita nas komunikat: *502 Bad Gateway*, co oznacza że pora dokonfigurować Gunicorn do nowej rzeczywistości.
+Jeżeli wszystko przebiegnie bez problemu, to po wejściu na stronę powita nas komunikat: *502 Bad Gateway*, co oznacza że pora dokonfigurować Gunicorn do nowej rzeczywistości.
 
 ```bash
 sudo nano /etc/systemd/system/helloworld.service
@@ -113,7 +113,7 @@ sudo systemctl start helloworld
 sudo systemctl enable helloworld
 ```
 
-Po tym kroku wszystko powinno już działać, dla pewności możemy sprawdzic jezscze status przy pomocy:
+Po tym kroku wszystko powinno już działać, dla pewności możemy sprawdzić jeszcze status przy pomocy:
 
 ```bash
 sudo systemctl status helloworld
