--- a/_posts/2020-05-03-JSON-i XML.md
+++ b/_posts/2020-05-03-JSON-i XML.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "JSON"
+title: "JSON i XML"
 categories: Python
 author: "Michał"
 math: true
@@ -50,3 +50,7 @@ with open('json_data.json', 'r') as data_file:
 | `True`          | true   |
 | `False`         | false  |
 | `None`          | null   |
+
+# XML
+
+Oryginalny wpis musiałem poszerzyć o sekcję poświęconą pliku XML, gdyż okazało się że jest on dla mnie dużo trudniejszy w obsłudze.
