--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -6,7 +6,7 @@ author: "Michał"
 ---
 
 
-Praca na linuksie pozwoliła mi w koncu skorzystać z zalet konteneryzacji. na razie wykorzystuje go wyłącznie do uruchamiania Jupyter Lab w odseparowanym środowisku korzystając z oficjalnego obrazu [jupyter/scipy-notebook](https://hub.docker.com/r/jupyter/scipy-notebook). 
+Praca na Linuksie pozwoliła mi w końcu skorzystać z zalet konteneryzacji. na razie wykorzystuje go wyłącznie do uruchamiania Jupyter Lab w odseparowanym środowisku korzystając z oficjalnego obrazu [jupyter/scipy-notebook](https://hub.docker.com/r/jupyter/scipy-notebook). 
 
 # Docker: podstawowe informacje
 
@@ -56,7 +56,7 @@ Tak uruchomiony kontener wymaga już tylko wpisania w oknie przeglądarki:
 127.0.0.1:10000/?token=1234
 ```
 
-Et voila! Można pracować wszystkie pliki zapisane w katalogu work bądą przechowywane na lokalnym systemie plików w katalogu '~/notebooks/'.
+*Et voila*! Można pracować wszystkie pliki zapisane w katalogu work będą przechowywane na lokalnym systemie plików w katalogu '~/notebooks/'.
 
 Na końcu jeszcze kilka przydatnych komand:
 
@@ -74,15 +74,14 @@ docker inspect {name} //szczegółowe informacje
 
 ## Modyfikacja obrazu
 
-Jeżeli potrzebny jest jakiś pakie który nie jest dostepny w pobranym obrazie, to potrzebna będzie jego modyfikacja (zmiana pliku dockerfile). Ten etap jeszcze przede mną, ale myśle ze wkrótce go tutaj dopiszę.
+Jeżeli potrzebny jest jakiś pakiet który nie jest dostępny w pobranym obrazie, to potrzebna będzie jego modyfikacja (zmiana pliku *dockerfile*). Ten etap jeszcze przede mną, ale myślę ze wkrótce go tutaj dopiszę.
 
-
-Dockerfile : https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile
+*Dockerfile* : https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile
 
 
 ## Docker-compose
 
-Spięcie kilku kontenerów w jedną całość jest możliwe z wykorzystaniem docker-compose.
+Spięcie kilku kontenerów w jedną całość jest możliwe z wykorzystaniem *docker-compose*.
 
 Instalacja ([oficjalna instrukcja](https://docs.docker.com/compose/install/)):
 ```bash
