--- a/_posts/2019-12-20-git.md
+++ b/_posts/2019-12-20-git.md
@@ -11,21 +11,23 @@ Praca w firmie z graficznym SVN dała mi podstawy idei systemów kontroli wersji
 
 Pierwszym krokiem była doinstalowanie osobno [git](https://git-scm.com/) tak żeby móc korzystać z niego poprzez edytor (*VS Code*) który daje mi większą kontrolę niż GithubDesktop. Kolejnymi krokami ma być nauczenie się prawidłowego podejścia.
 
-[How to Write a Git Commit Message](https://chris.beams.io/posts/git-commit/)
-
-[Git Commit Message Style Guide](http://udacity.github.io/git-styleguide/)
-
 ### Praktyczne wprowadzenie
 Wysyłanie danych na serwer:
 
 ```
 git status
-git add
+git add <filename>
 git commit -m "commit description"
 git push
 ```
 
-Zamiast pojedynczego `git add <nazwa>` lub dodającego wszystko `git add .` można wygrać rozwiązanie pośrednie: interakrtywne dodawanie plików z pomocą `git add -p`
+Zamiast pojedynczego `git add <nazwa>` lub dodającego wszystko `git add .` można wygrać rozwiązanie pośrednie: interaktywne dodawanie plików z pomocą `git add -p` 
+
+Komenda `git add -u` przygotuje do wysłania wyłącznie zmodyfikowane pliki i te które zostały usunięte (nie doda do śledzenia nowych plików). MOżna to zamknąć również w jednej komendzie:
+
+```
+git commit -a -m commit description"
+```
 
 Synchronizacja lokalnych danych z zdalnym repozytorium
 ```
@@ -34,11 +36,43 @@ git diff master origin/master
 git merge
 ```
 
-Jeżeli nie chcemy przeglądać zmian to można zrobić to w jednym podejśćiu (cały projekt/ konkretny branch):
+Jeżeli nie chcemy przeglądać zmian to można zrobić to w jednym podejściu (cały projekt/ konkretny branch):
 ```
 git pull
 git pull origin feature/C9-113
 ```
+
+#### Treść commit message
+
+Format [conventionalcommits](https://www.conventionalcommits.org/en/v1.0.0/): `<type>(<scope>): <subject>`
+`<scope>` jest opcjonalny
+
+```
+feat: add hat wobble
+^--^  ^------------^
+|     |
+|     +-> Summary in present tense.
+|
++-------> Type: chore, docs, feat, fix, refactor, style, or test.
+```
+
+Więcej [przykładów](https://gist.github.com/joshbuchea/6f47e86d2510bce28f8e7f42ae84c716):
+
+- `feat`: (new feature for the user, not a new feature for build script)
+- `fix`: (bug fix for the user, not a fix to a build script)
+- `docs`: (changes to the documentation)
+- `style`: (formatting, missing semi colons, etc; no production code change)
+- `refactor`: (refactoring production code, eg. renaming a variable)
+- `test`: (adding missing tests, refactoring tests; no production code change)
+- `chore`: (updating grunt tasks etc; no production code change)
+
+
+
+Więcej:
+
+[How to Write a Git Commit Message](https://chris.beams.io/posts/git-commit/)
+
+[Git Commit Message Style Guide](http://udacity.github.io/git-styleguide/)
 
 ### Teoria
 
