--- a/_posts/2019-12-24-Linux.md
+++ b/_posts/2019-12-24-Linux.md
@@ -7,6 +7,25 @@ author: "Michał"
 
 Najważniejsze (podstawowe) informacje pomocne przy pracy z systemem Linux.
 
+## System plików
+
+[Filesystem Hierarchy Standard (FHS)](https://en.wikipedia.org/wiki/Filesystem_Hierarchy_Standard)
+
+## Python
+
+Tworzenie venv gdy nie jest się root-em:
+```
+apt-get install python3-venv
+sudo su root
+
+python3 -m venv --copies ve
+source ve/bin/activate
+
+python3 -m pip install -U pip setuptools
+python3 -m pip list
+python3 -m pip install pika
+```
+
 ## Dowiązanie symboliczne
 
 ```
