Update: MySQL, Docker

--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -8,6 +8,8 @@ author: "Michał"
 
 W poszukiwaniu idealnego frameworka webowego.
 
+## Lokalna instalacja
+
 ```bash
 apt-get install python3-venv
 sudo su root
@@ -37,4 +39,12 @@ async def root():
 Uruchomienie:
 ```bash
 uvicorn main:app --port 5000 --reload
+```
+
+
+## Połączenie z MySQL
+
+```bash
+pipenv install sqlalchemy
+pip install mysql-connector-python
 ```
