--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -41,10 +41,28 @@ Uruchomienie:
 uvicorn main:app --port 5000 --reload
 ```
 
+W pryzpdku struktury: 
+```bash
+└── project
+    └── app
+        ├── __init__.py
+        └── main.py
+```
+
+uruchomienie odbędzie się komendą:
+```bash
+uvicorn app.main:app --port 5000 --reload
+```
+
 
 ## Połączenie z MySQL
 
 ```bash
 pipenv install sqlalchemy
 pip install mysql-connector-python
+```
+
+Do nauki korzystam z MySQL (docker). Uruchomienie:
+```bash
+sudo docker-compose up -d 
 ```
