Update: Docker/FastApi

--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -138,3 +138,22 @@ volumes:
 
 
 Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem http://localhost:8800/
+
+## Dostęp do kontenera
+
+Potrzebny będzie CONTAINER ID,
+```bash
+docker ps
+```
+Wyświetli wszystkie kontenery:
+
+```bash
+CONTAINER ID   IMAGE                      COMMAND                  CREATED        STATUS       PORTS                  NAMES
+e193b49525f9   nginx:latest               "/docker-entrypoint.…"   22 hours ago   Up 3 hours   0.0.0.0:8080->80/tcp   discountcodesbackend_web_1
+```
+
+Znając ten identyfikator mozna zalogować się poleceniem
+
+```bash
+docker exec -it CONTAINER_ID /bin/bash
+```
