--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -66,3 +66,59 @@ Do nauki korzystam z MySQL (docker). Uruchomienie:
 ```bash
 sudo docker-compose up -d 
 ```
+Na potrzeby wygenerowania modeli dla SQLAlchemy skorzystałem z [sqlacodegen](https://pypi.org/project/sqlacodegen/):
+
+```bash
+sqlacodegen --outfile models.py \
+mysql+mysqlconnector://{user_name}:{password}@{host}:{port}/{database_name}?charset=utf8
+```
+
+
+## Struktura dla większego projektu:
+
+```bash
+.
+├── app/
+│   ├── __init__.py
+│   ├── main.py
+│   ├── config/
+│   │   ├── __init__.py
+│   │   ├── db.py
+│   │   └── settings.py
+│   ├── models/
+│   │   ├── __init__.py
+│   │   ├── clients.py
+│   │   └── user.py
+│   ├── routers/
+│   │   ├── __init__.py
+│   │   ├── auth.py
+│   │   ├── basic_db_req.py
+│   │   ├── registrations.py
+│   │   └── www.py
+│   ├── schemas/
+│   │   ├── __init__.py
+│   │   ├── auth.py
+│   │   ├── clients.py
+│   │   └── users.py
+│   ├── services/
+│   │   ├── __init__.py
+│   │   ├── auth.py
+│   │   ├── clients.py
+│   │   ├── crud.py
+│   │   └── notification.py
+│   ├── static/
+│   └── templates/
+│       ├── 404.html
+│       ├── 500.html
+│       ├── form.html
+│       ├── index.html
+│       ├── navbar.html
+│       ├── onboarding.html
+│       ├── plt/
+│       │   ├── plt_mileage.html
+│       │   ├── plt_price.html
+│       │   └── plt_sca_year.html
+│       ├── price.html
+│       └── sudoku.html
+└── docker-compose.yml
+```
