--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -18,9 +18,9 @@ python3 -m venv --copies ve
 source ve/bin/activate
 
 python3 -m pip install -U pip setuptools
-python3 -m pip list
-python3 -m pip install fastapi uvicorn
-python3 -m pip install jinja2 python-multipart
+pip install wheel
+pip list
+pip install fastapi[all]
 ```
 
 Plik `main.py` :
