--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -37,13 +37,13 @@ pip install joblib
 
 Jeżeli w wyniku wykonania poniższej komendy nie pojawiają się błędy to powinniśmy móc [przeglądać stronę na porcie 5000](http://192.166.219.228:5000/)
 
-```
+```bash
 gunicorn --bind 0.0.0.0:5000 wsgi:app
 ```
 
 Jeżeli wszystko działa to można przerwać działanie gunicorn `CTRL+C` i uaktualnić konfigurację NGINX.
 
-```
+```bash
 cd /etc/nginx/sites-available/
 sudo nano helloworld
 ```
