--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -1,12 +1,17 @@
 ---
 layout: post
-title: "FastApi: podstawy"
+title: "FastApi: podstawy (I)"
 categories: Python
 author: "Michał"
 ---
 
 
+
 W poszukiwaniu idealnego frameworka webowego.
+
+Najpopularniejsze frameworki webowe dla Python to Django i Flask. PIerwszy zalecany jest dla dużych serwisów i jak mówią w internecie posiada wszystko co trzeba żeby postawić dużą aplikację. Flask z kolei jest  bardzo skromny na dzień dobry, ale poprzez doinstalowanie dodatkowych modułów pozwala na równie wiele.
+
+Django nie testowałem, miałem krótką przygodę z Flask, ale po poznaniu Laravel (PHP) uznałem że potrzebuje czegoś więcej. I wtedy pojawił się FastAPI. Wydaje się on być kompromisem pomiędzy Django a Flask. Ma już sporo rzeczy w sobie, ale jednocześnie pozwala stworzyć serwis w 5 linijkach kodu.  
 
 ## Lokalna instalacja
 
@@ -17,7 +22,7 @@ sudo su root
 python3 -m venv --copies ve
 source ve/bin/activate
 
-python3 -m pip install -U pip setuptools
+pip install -U pip setuptools
 pip install wheel
 pip list
 pip install fastapi[all]
@@ -30,7 +35,6 @@ from fastapi import FastAPI
 
 app = FastAPI()
 
-
 @app.get("/")
 async def root():
     return {"message": "Hello World"}
@@ -41,7 +45,7 @@ Uruchomienie:
 uvicorn main:app --port 5000 --reload
 ```
 
-W pryzpdku struktury: 
+W przypadku struktury: 
 ```bash
 └── project
     └── app
@@ -58,8 +62,9 @@ uvicorn app.main:app --port 5000 --reload
 ## Połączenie z MySQL
 
 ```bash
-pipenv install sqlalchemy
+pip install sqlalchemy
 pip install mysql-connector-python
+pip instal sqlacodegen
 ```
 
 Do nauki korzystam z MySQL (docker). Uruchomienie:
