--- a/_posts/2021-03-25-Vue.md
+++ b/_posts/2021-03-25-Vue.md
@@ -1,17 +1,17 @@
 ---
 layout: post
-title: "FastApi: Autoryzacja"
+title: "Vue.js - pierwsze kroki"
 categories: Vue
 author: "Michał"
 ---
 
-FastAPI spełnia bardzo dobrze moje backend-owe potrzeby, ale budowanie warstwy wizualnej  opartej o Jinja jest trochę problematyczne i wprowadza bałagan. Stąd pomysł na opanowanie podstaw Frontend, podobno najporściej zrobić to z Vue.js. 
+FastAPI spełnia bardzo dobrze moje backend-owe potrzeby, ale budowanie warstwy wizualnej  opartej o Jinja jest trochę problematyczne i wprowadza bałagan. Stąd pomysł na opanowanie podstaw frontend, podobno najporściej zrobić to z Vue.js. 
 
 Pierwszy projekt: strona logowania i rejestracji
 
 ## Hello world w Vue.js
 
-Pojedynczy plik index.php:
+Pojedynczy plik `index.php`:
 
 ```html
 <html lang="en">
