env in docker-compose

--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -139,6 +139,31 @@ volumes:
 
 Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem http://localhost:8800/
 
+### Plik .env
+
+Przechowywanie haseł w pliku *docker-compose.yml* nie jest bezpieczne, lepiej mieć je w osobnym miejscu. 
+
+```yml
+MYSQL_USER: ${MYSQL_USER}
+MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+```
+
+plik `maria.env`:
+
+```
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=user
+MYSQL_PASSWORD=pass
+```
+
+Przekazanie informacji o pliku `.env` podczas uruchamiania kontenera: 
+
+```
+docker-compose --env-file maria.env up
+```
+
+
+
 ## Dostęp do kontenera
 
 Potrzebny będzie CONTAINER ID,
