--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -159,7 +159,7 @@ MYSQL_PASSWORD=pass
 Przekazanie informacji o pliku `.env` podczas uruchamiania kontenera: 
 
 ```
-docker-compose --env-file maria.env up
+docker-compose --env-file maria.env up -d
 ```
 
 
