--- a/_posts/2021-03-25-Vue.md
+++ b/_posts/2021-03-25-Vue.md
@@ -9,6 +9,30 @@ FastAPI spełnia bardzo dobrze moje backend-owe potrzeby, ale budowanie warstwy 
 
 Pierwszy projekt: strona logowania i rejestracji
 
+## Instalacja node.js
+
+```bash
+curl -sL https://deb.nodesource.com/setup_14.x -o nodesource_setup.sh
+sudo bash nodesource_setup.sh
+sudo apt install nodejs
+```
+
+### VUE CLI
+
+```bash
+sudo npm install -g @vue/cli
+```
+
+```bash
+cd ./projekt
+npm install
+npm run serve
+```
+
+
+
+
+
 ## Hello world w Vue.js
 
 Pojedynczy plik `index.php`:
