--- a/_posts/2019-12-20-git.md
+++ b/_posts/2019-12-20-git.md
@@ -11,6 +11,14 @@ Praca w firmie z graficznym SVN dała mi podstawy idei systemów kontroli wersji
 
 Pierwszym krokiem była doinstalowanie osobno [git](https://git-scm.com/) tak żeby móc korzystać z niego poprzez edytor (*VS Code*) który daje mi większą kontrolę niż GithubDesktop. Kolejnymi krokami ma być nauczenie się prawidłowego podejścia.
 
+### Odzyskiwanie miejsca
+
+```bash
+git repack && git prune-packed && git gc --aggressive
+```
+
+
+
 ### Praktyczne wprowadzenie
 Wysyłanie danych na serwer:
 
@@ -521,7 +529,6 @@ atrybut -a jest wykorzystywany do stwoerzenia bardziej rozbudowanego tagu ("anno
 * git push origin :<feature branch>
 * git branch -d <feature branch>
 * git remote update --prune
-
 
 
 
