AWS presigned URL

--- a/_posts/2021-12-20-AWS.md
+++ b/_posts/2021-12-20-AWS.md
@@ -21,51 +21,10 @@ Hosting API i staycznego frontendu + blog
 ## AWS ECS
 [Flask to AWS ECS - playlist](https://www.youtube.com/watch?v=kqa_cchAMLY&list=PL0dOL8Z7pG3IWsvseNd-JoFTHL16P_iTC)
 
-## IAM 
-
-Krok pierwszy, utworzenie użytkownika: 
-
-Nazwa: *aws-ecs-user*
-
-Dostęp: *Programmatic access - with an access key*
-
-Uprawnienia:
-
-- AmazonEC2FullAccess
-- AmazonEC2ContainerRegistryFullAccess 
-- AmazonECS_FullAccess
-- EC2InstanceProfileForImageBuilderECRContainerBuilds 
-
-## ECR
-
-Repozytorium kontenerów docker-a:
-
-- prywatne
-- nazwa: aws-ecs
-
-## ECS
-
-https://youtu.be/ZwSlFIFM39k
-
-Kroki: Task definition
-
-### Task definition
-
-Typ: EC2
-
-Role: ecsTaskExecutionRole (uprawnienie: AmazonECSTaskExecutionRolePolicy)
 
 
+### Upload to AWS S3 with presigned URL
 
-### Cluster
+**[PUT]** https://bucket-name.s3.region.amazonaws.com/folder/filename.jpg?AWSAccessKeyId=XXX&Content-Type=image%2Fjpeg&Expires=XXX&Signature=XXX
 
-Typ: EC2 Linux + Networking
-
-Nazwa: aws-ecs-cluster
-
-
-
-### Service
-
-Trzeba wcześniej dodać load balancer ( EC2 > Load Balancers> Application Load Balancer)
-
+> Body -> binary -> Select file
