--- a/_posts/2019-12-20-git.md
+++ b/_posts/2019-12-20-git.md
@@ -448,6 +448,18 @@ atrybut -a jest wykorzystywany do stwoerzenia bardziej rozbudowanego tagu ("anno
 
 
 
+### DODATKI
+
+Przywraca stare zachoowanie dla git > 2.29  "Pulling without specifying how to reconcile divergent branches is discouraged"
+
+```
+git config pull.ff true
+```
+
+
+
+
+
 ## GIT Workflow (wg. [kursgita.pl](https://kursgita.pl/)):
 
 
