Remove outdated posts

--- a/_posts/2020-05-03-JSON-i XML.md
+++ b/_posts/2020-05-03-JSON-i XML.md
@@ -11,6 +11,7 @@ math: true
 JSON w skrócie: lekki, tekstowy format wymiany danych (w odróżnieniu od XML). Pomimo swojej nazwy, JSON jest formatem niezależnym od konkretnego języka programowania. Kodowany za pomocą UTF-8, który jest dla JSON domyślnym systemem kodowania. Ma podobną postać do zapisu słownika Python.
 
 # JSON
+
 ```json
 {    "name":"Luke Skywalker",
     "eye_color":"Blue",
@@ -27,19 +28,24 @@ JSON w skrócie: lekki, tekstowy format wymiany danych (w odróżnieniu od XML).
     "edited":"2014-12-10T13:52:43.172000Z"
 }
 ```
+
 Zapis:
+
 ```python
 with open('data.json', 'w') as data_file:
-	json.dump(data, data_file, indent=4)
+ json.dump(data, data_file, indent=4)
 ```
+
 Odczyt:
+
 ```python
 with open('json_data.json', 'r') as data_file:
-	data = json.load(data_file)
-	print(data['name'])
-	print(data['created'])
+ data = json.load(data_file)
+ print(data['name'])
+ print(data['created'])
 ```
-### Tabela konwersji Python <-> JSON:
+
+### Tabela konwersji Python <-> JSON
 
 | Python          | JSON   |
 | --------------- | ------ |
