--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -6,15 +6,16 @@ author: "Michał"
 ---
 
 
-Praca na Linuksie pozwoliła mi w końcu skorzystać z zalet konteneryzacji. na razie wykorzystuje go wyłącznie do uruchamiania Jupyter Lab w odseparowanym środowisku korzystając z oficjalnego obrazu [jupyter/scipy-notebook](https://hub.docker.com/r/jupyter/scipy-notebook). 
+Praca na Linuksie pozwoliła mi w końcu skorzystać z zalet konteneryzacji. na razie wykorzystuje go wyłącznie do uruchamiania Jupyter Lab w odseparowanym środowisku korzystając z oficjalnego obrazu [jupyter/scipy-notebook](https://hub.docker.com/r/jupyter/scipy-notebook).
 
 # Docker: podstawowe informacje
 
 Do instalacji posłuzyłem się oficjalną instrukcją [oficjalną instrukcj](https://docs.docker.com/engine/install/ubuntu/) (Ubuntu).
 
-Udało mi się też znaleźć prosty tutorial z opisem pobierania obrazów i zarządzania kontenerami: [A Docker Tutorial for Beginners](https://docker-curriculum.com/). 
+Udało mi się też znaleźć prosty tutorial z opisem pobierania obrazów i zarządzania kontenerami: [A Docker Tutorial for Beginners](https://docker-curriculum.com/).
 
 Pierwszy problem pojawił się zaraz na początku, próba uruchomienia:
+
 ```bash
 docker run hello-world
 ```
@@ -31,13 +32,15 @@ sudo chmod 666 /var/run/docker.sock
 
 można też ominąć ten krok uruchamiając komendę jako administrator (`sudo`)
 
-Kolejnym znaczacym problemem było znalezienie sposobu na kontynyuację pracy po zamknięciu kontenera. Po serii eksperymentów i lekturze oficjalnej dokumentacji oraz artykułu [Tutorial: Running a Dockerized Jupyter Server for Data Science](https://www.dataquest.io/blog/docker-data-science/) doszedłem do optymalnego dla mnie sposobu pracy. 
+Kolejnym znaczacym problemem było znalezienie sposobu na kontynyuację pracy po zamknięciu kontenera. Po serii eksperymentów i lekturze oficjalnej dokumentacji oraz artykułu [Tutorial: Running a Dockerized Jupyter Server for Data Science](https://www.dataquest.io/blog/docker-data-science/) doszedłem do optymalnego dla mnie sposobu pracy.
 
-Pierwszym krokiem było utworzenie katalogu w  którym będą przechowywane dane do pracy: 
+Pierwszym krokiem było utworzenie katalogu w  którym będą przechowywane dane do pracy:
+
 ```bash
 mkdir ~/notebooks
 chmod 777 ~/notebooks
 ```
+
 Kolejnym było odpowiednie uruchamianie kontenera, finalnie doszedłem do postaci:
 
 ```bash
@@ -78,14 +81,14 @@ docker inspect {name} //szczegółowe informacje
 
 Jeżeli potrzebny jest jakiś pakiet który nie jest dostępny w pobranym obrazie, to potrzebna będzie jego modyfikacja (zmiana pliku *dockerfile*). Ten etap jeszcze przede mną, ale myślę ze wkrótce go tutaj dopiszę.
 
-*Dockerfile* : https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile
-
+*Dockerfile* : <https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile>
 
 ## Docker-compose
 
 Spięcie kilku kontenerów w jedną całość jest możliwe z wykorzystaniem *docker-compose*.
 
 Instalacja ([oficjalna instrukcja](https://docs.docker.com/compose/install/)):
+
 ```bash
 sudo curl -L "https://github.com/docker/compose/releases/download/1.27.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
@@ -93,11 +96,13 @@ sudo chmod +x /usr/local/bin/docker-compose
 ```
 
 lub po prostu:
+
 ```bash
 sudo apt  install docker-compose
 ```
 
 Sprawdzenie działania:
+
 ```bash
 docker-compose --version
 docker-compose version 1.27.3, build 4092ae5d
@@ -136,12 +141,11 @@ volumes:
     db_data: {}
 ```
 
-
-Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem http://localhost:8800/
+Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem <http://localhost:8800/>
 
 ### Plik .env
 
-Przechowywanie haseł w pliku *docker-compose.yml* nie jest bezpieczne, lepiej mieć je w osobnym miejscu. 
+Przechowywanie haseł w pliku *docker-compose.yml* nie jest bezpieczne, lepiej mieć je w osobnym miejscu.
 
 ```yml
 MYSQL_USER: ${MYSQL_USER}
@@ -156,20 +160,20 @@ MYSQL_USER=user
 MYSQL_PASSWORD=pass
 ```
 
-Przekazanie informacji o pliku `.env` podczas uruchamiania kontenera: 
+Przekazanie informacji o pliku `.env` podczas uruchamiania kontenera:
 
 ```
 docker-compose --env-file maria.env up -d
 ```
 
-
-
 ## Dostęp do kontenera
 
 Potrzebny będzie CONTAINER ID,
+
 ```bash
 docker ps
 ```
+
 Wyświetli wszystkie kontenery:
 
 ```bash
