--- a/_posts/2020-12-16-FastApi.md
+++ b/_posts/2020-12-16-FastApi.md
@@ -41,11 +41,13 @@ async def root():
 ```
 
 Uruchomienie:
+
 ```bash
 uvicorn main:app --port 5000 --reload
 ```
 
-W przypadku struktury: 
+W przypadku struktury:
+
 ```bash
 └── project
     └── app
@@ -54,10 +56,10 @@ W przypadku struktury:
 ```
 
 uruchomienie odbędzie się komendą:
+
 ```bash
 uvicorn app.main:app --port 5000 --reload
 ```
-
 
 ## Połączenie z MySQL
 
@@ -68,9 +70,11 @@ pip instal sqlacodegen
 ```
 
 Do nauki korzystam z MySQL (docker). Uruchomienie:
+
 ```bash
 sudo docker-compose up -d 
 ```
+
 Na potrzeby wygenerowania modeli dla SQLAlchemy skorzystałem z [sqlacodegen](https://pypi.org/project/sqlacodegen/):
 
 ```bash
@@ -78,8 +82,7 @@ sqlacodegen --outfile models.py \
 mysql+mysqlconnector://{user_name}:{password}@{host}:{port}/{database_name}?charset=utf8
 ```
 
-
-## Struktura dla większego projektu:
+## Struktura dla większego projektu
 
 ```bash
 .
