--- a/_posts/2021-12-20-AWS.md
+++ b/_posts/2021-12-20-AWS.md
@@ -8,23 +8,20 @@ math: false
 
 Próba zebrania całej dotychczasowej wiedzy na temat devops-u
 
-
-
 # AWS
 
-Hosting API i staycznego frontendu + blog 
+Hosting API i staycznego frontendu + blog
 
 ## S3 Bucket static site distribution
+
 [React App on AWS S3 with Static Hosting + Cloudfront | Practical AWS Projects #1](https://www.youtube.com/watch?v=mls8tiiI3uc)
 
-
 ## AWS ECS
+
 [Flask to AWS ECS - playlist](https://www.youtube.com/watch?v=kqa_cchAMLY&list=PL0dOL8Z7pG3IWsvseNd-JoFTHL16P_iTC)
-
-
 
 ### Upload to AWS S3 with presigned URL
 
-**[PUT]** https://bucket-name.s3.region.amazonaws.com/folder/filename.jpg?AWSAccessKeyId=XXX&Content-Type=image%2Fjpeg&Expires=XXX&Signature=XXX
+**[PUT]** <https://bucket-name.s3.region.amazonaws.com/folder/filename.jpg?AWSAccessKeyId=XXX&Content-Type=image%2Fjpeg&Expires=XXX&Signature=XXX>
 
 > Body -> binary -> Select file
