Docker compose logs

--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -8,7 +8,7 @@ author: "Michał"
 
 Praca na Linuksie pozwoliła mi w końcu skorzystać z zalet konteneryzacji. na razie wykorzystuje go wyłącznie do uruchamiania Jupyter Lab w odseparowanym środowisku korzystając z oficjalnego obrazu [jupyter/scipy-notebook](https://hub.docker.com/r/jupyter/scipy-notebook).
 
-# Docker: podstawowe informacje
+## Docker: podstawowe informacje
 
 Do instalacji posłuzyłem się oficjalną instrukcją [oficjalną instrukcj](https://docs.docker.com/engine/install/ubuntu/) (Ubuntu).
 
@@ -142,6 +142,15 @@ volumes:
 ```
 
 Po uruchomieniu komendy `docker-compose up` (w katalogu gdzie znajduje się plik yml) wordpress będzie dostępny pod adresem <http://localhost:8800/>
+
+### Logi z kontenerów
+
+```bash
+docker compose logs <name-of-service:web/db/etc.>
+```
+
+`-f, --follow`  Follow log output
+`-n, --tail`  Number of lines to show from the end of the logs for each container
 
 ### Plik .env
 
